fixing functionality of dropdown menu on mobile and positioning of dropdown on desktop

--- a/themes/compro_theme/sass/drupal/_region.scss
+++ b/themes/compro_theme/sass/drupal/_region.scss
@@ -33,7 +33,7 @@
   }
 
   @media all and (max-width: 1230px) {
-    max-width: 48%;
+    max-width: 43%;
   }
 
   @media all and (max-width: 940px) {
@@ -59,7 +59,7 @@
       text-align: center;
       top: 240px;
       width: 100%;
-      z-index: 10;
+      z-index: 2;
 
     }
 
@@ -69,7 +69,7 @@
     display: inline-block;
     float: right;
     //transform: translateY(50%);
-    z-index: 1000;
+    //z-index: 1000;
   }
 
   .block-search-icon-block {
